fix: overflow-x concertado

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -7,6 +7,9 @@
   }
   body {
     max-width: 100%;
+    flex: 1;
+    border-color: red 5px solid;
+    overflow-x: hidden;
   }
   .content-portifolio {
     width: 100%;
@@ -63,21 +66,15 @@
   main .Sobre-content {
     justify-self: center;
     align-self: center;
-    margin-top: 20vh;
+    margin-top: 10vh;
     margin-left: 0;
-    width: 100%;
-    height: 100vh;
+    max-width: 100%;
+    height: 50vh;
   }
   main .Sobre-content .sobre-mim h3 {
     font-size: 30px;
   }
   main .Sobre-content .sobre-mim p {
-    font-size: 16px;
-  }
-  main .Sobre-content .objetivo-content h4 {
-    font-size: 20px;
-  }
-  main .Sobre-content .objetivo-content p {
     font-size: 16px;
   }
 
@@ -105,14 +102,15 @@
 
   main .contato {
     width: 100%;
-    height: 200vh;
+    height: 120vh;
     justify-self: center;
+    border: solid 1px wheat;
   }
   main .contato h3 {
     font-size: 30px;
   }
   main .contato p {
-    font-size: 22px;
+    font-size: 16px;
   }
   main .contato .form-contato {
     width: 100%;
@@ -120,14 +118,15 @@
     flex-direction: column;
     align-items: left;
     justify-content: center;
+    margin-bottom: 0;
   }
   main .contato .form-contato form {
     max-width: 100%;
-    height: 100vh;
+    height: 75vh;
     margin-bottom: 0;
-    /* margin-bottom: 0vh; */
   }
   main .contato .form-contato form h4 {
+    margin-top: 1rem;
     font-size: 25px;
   }
   form label {
@@ -137,24 +136,24 @@
     font-size: 16px;
   }
   main .contato .form-contato form #name {
-    max-width: 80%;
+    max-width: 100%;
     height: 5vh;
-    margin: 0;
+    
   }
   main .contato .form-contato form #email {
     max-width: 80%;
     height: 5vh;
-    margin: 0;
+    
   }
   main .contato .form-contato form #assunto {
     max-width: 80%;
     height: 5vh;
-    margin: 0;
+    
   }
   main .contato .form-contato form #message {
     max-width: 80%;
     height: 5vh;
-    margin: 0;
+    
   }
   main .contato .form-contato form button {
     width: 10vh;
@@ -165,10 +164,12 @@
   footer {
     margin-top: 0;
     width: 100%;
-    height: 100vh;
+    height: 80vh;
     display: grid;
     grid-template-columns: auto;
     text-align: left;
+    position: relative;
+    bottom: 0px;
   }
   footer .informacao h3 {
     font-size: 20px;
@@ -180,7 +181,7 @@
     text-align: center;
   }
   footer .informacao p {
-    font-size: 16px;
+    font-size: 12px;
     min-width: 0;
     max-width: 200px;
     height: 20vh;
@@ -188,10 +189,10 @@
 
   footer .social h3 {
     margin-top: 0;
-    font-size: 20px;
+    font-size: 16px;
   }
   footer .social ul {
-    font-size: 16px;
+    font-size: 14px;
   }
 
   footer .direitos {
